# ESP_Monitor_lightBar

./: README.md
Light_BAR/light_bar/: CMakeLists.txt  platformio.ini  sdkconfig.seeed_xiao_esp32c3  sdkconfig.upesy_wroom
Light_BAR/light_bar/components/controller/: CMakeLists.txt  color_temp_hsv_lookup.c  config.h  connection.c  connection.h  controller.c  controller.h  gamma_correction_lookup.c
Light_BAR/light_bar/components/fsm/: CMakeLists.txt  fsm.c  fsm.h  fsm_events.h  fsm_port.c  fsm_port.h  fsm_signals.h  timer_channel.h  timer_evt.c  timer_evt.h
Light_BAR/light_bar/components/led_strip/src/: led_strip_api.c
Light_BAR/light_bar/src/: CMakeLists.txt  ao.hpp  config.h  event.hpp  led_ao.hpp  main.c  main.cpp  signals.hpp
Light_BAR/light_bar/src/ESP32Encoder/src/: CMakeLists.txt  InterruptEncoder.cpp  InterruptEncoder.h
Table_Control/table_control/: CMakeLists.txt  platformio.ini  sdkconfig.seeed_xiao_esp32c3  sdkconfig.upesy_wroom
Table_Control/table_control/.claude/: settings.local.json
Table_Control/table_control/components/controller/: CMakeLists.txt  config.h  connection_setup.c  connection_setup.h  controller.c  controller.h
Table_Control/table_control/components/fsm/: CMakeLists.txt  fsm.c  fsm.h  fsm_events.h  fsm_port.c  fsm_port.h  fsm_signals.h  timer_evt.c  timer_evt.h
Table_Control/table_control/components/knob/: CMakeLists.txt  knob.h
Table_Control/table_control/components/led_strip/: CMakeLists.txt
Table_Control/table_control/src/: CMakeLists.txt  config.h  controller.c  controller.h  main.c
